# llm-weighted-consensus

./: Cargo.toml
src/: error.rs  lib.rs  main.rs  util.rs
src/chat/completions/: client.rs  error.rs  mod.rs  request.rs  response.rs
src/completions_archive/: fetcher.rs  mod.rs
src/embeddings/: response.rs
src/multichat/completions/: response.rs
src/score/: mod.rs
src/score/completions/: client.rs  error.rs  mod.rs  request.rs  response.rs  weight.rs
src/score/llm/: mod.rs
src/score/model/: fetcher.rs  mod.rs
